--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
@@ -10,11 +14,32 @@ header {
     color: #fff;
     text-align: center;
     padding: 1em;
+    display: flex;
+    justify-content: space-around;
 }
 
-a.logout {
+header, section, footer {
+    width: 100%;
+    padding: 20px;
+}
+
+nav ul {
+    display: flex;
+    padding-top: 10px;
+}
+
+li {
+    list-style-type: none;
+    padding: 5px 12px;
+}
+
+a {
     color: white;
     text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 section {
@@ -24,6 +49,7 @@ section {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    flex: 1;
 }
 
 label {
@@ -47,12 +73,35 @@ button {
     cursor: pointer;
 }
 
+.success-message {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
 footer {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 1em;
-    position: fixed;
+    padding: 2em;
     bottom: 0;
     width: 100%;
+    margin-top: auto;
 }
